# Floorplan-Diffusion-Models

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  Taskfile.yml  pyproject.toml
.claude/: settings.local.json
.claude/skills/: data-pipeline.md  evaluation.md  training.md
.github/workflows/: ci.yml
configs/: resplan_housediff.yaml
notebooks/: 01_resplan_exploration.ipynb  02_data_conversion_dev.ipynb  03_training_analysis.ipynb  04_evaluation.ipynb
src/floorplan_diffusion/: __init__.py
src/helpers/: resplandataset.py
tests/: .gitkeep  test_resplandataset.py
